# vk_rays

./: .gitignore  Cargo.toml  README.md  download_assets.sh
assets/shaders/: brdf.glsl  common.glsl  hit.rchit  miss.rmiss  quad.frag  quad.vert  rand.glsl  raygen.rgen  sphere.rchit  sphere.rint  test.comp
src/: acceleration_structure.rs  camera.rs  composed_asset.rs  gltf_assets.rs  initializers.rs  main.rs  rasterization_pipeline.rs  raytracing_pipeline.rs  render_buffer.rs  render_device.rs  render_image.rs  render_plugin.rs  scene.rs  shader.rs  shader_binding_table.rs  sphere_blas.rs  swapchain.rs  texture.rs  vk_utils.rs  vulkan_asset_server.rs  vulkan_assets.rs  vulkan_cleanup.rs
