[package]
name = "vk_rays"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.37.2"
ash-window = "0.12.0"
gpu-allocator = "0.22.0"
bevy = { version = "0.10.0", features = ["debug_asset_server"] }
shaderc = "0.8.2"
shaderc-sys = "0.8.2"
clap = { version = "4.2.1", features = ["derive"] }
bytemuck = "1.13.1"
bytemuck_derive = "1.4.1"
crossbeam-channel = "0.5.8"
winit = "0.28.3"
gltf = "1.1.0"
rand = "0.8.5"
bevy_rapier3d = { version = "0.21.0", default-features = false, features = ["dim3", "async-collider"] }
regex = "1.8.1"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
